# platform_b

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/platform_a/: CMakeLists.txt
include/platform_b/: CMakeLists.txt
src/: CMakeLists.txt  gen_greet.cpp
